Atualiza código para integração com MongoDB e ajustes gerais

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-spring.application.name=receitas
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Receitas?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-spring.messages.basename=message
-msg.openapi.erro=Erro Interno
+spring.data.mongodb.uri=mongodb+srv://arthur:OoycOcHMq8IvXcbD@receitas.elhmono.mongodb.net/Receitas?retryWrites=true&w=majority
+server.port=8080
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
