--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.data.mongodb.uri=mongodb+srv://arthur:OoycOcHMq8IvXcbD@receitas.elhmono.mongodb.net/Receitas?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://arthur:08Arthur@crud.mri9cxn.mongodb.net/receitasdb?retryWrites=true&w=majority&appName=Crud&connectTimeoutMS=10000&socketTimeoutMS=60000
 server.port=8080
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+spring.data.mongodb.connection-pool.max-size=30
+spring.data.mongodb.connection-pool.min-size=10
+spring.data.mongodb.connection-pool.max-wait-time=120000
